# skarner-core

./: .claudeignore  .gitignore  CLAUDE.md  Dockerfile.test  README.md  TODO.md  pyproject.toml
docs/superpowers/plans/: 2026-01-03-unified-exception-handling.md
docs/superpowers/specs/: 2026-01-03-unified-exception-handling-design.md
src/skarner/core/auth/: __init__.py  jwt.py
src/skarner/core/config/: __init__.py  loader.py  settings.py
src/skarner/core/db/: __init__.py  engine.py  session.py
src/skarner/core/exceptions/: __init__.py  base.py  codes.py
src/skarner/core/integrations/fastapi/: __init__.py  exception_handler.py
src/skarner/core/logging/: logger.py
src/skarner/core/ratelimit/: __init__.py  base.py  memory.py  redis.py
src/skarner/core/redis/: __init__.py  client.py  config.py
src/skarner/core/response/: __init__.py  model.py
src/skarner/core/tracing/: __init__.py  trace.py
tests/: test_config.py  test_db.py  test_exceptions.py  test_jwt.py  test_log.py  test_ratelimit.py  test_redis.py  test_response.py  test_trace.py
tests/integrations/fastapi/: test_exception_handler.py
