[project]
name = "skarner-core"
version = "0.1.0"
description = "Core infrastructure utilities"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pyjwt",
    "pydantic",
]

[project.optional-dependencies]
mysql = [
    "sqlalchemy>=2.0",
    "aiomysql>=0.2.0",
]
postgresql = [
    "sqlalchemy>=2.0",
    "asyncpg>=0.29.0",
]
db = [
    "sqlalchemy>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
